Consolidated errors ZZ
